--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,4 @@
-<p>
-  dashboard works!
-</p>
-<h3>Top Agents</h3>
+<h1>Top 5 Agents</h1> <br>
 <div class="grid grid-pad">
   <a *ngFor="let agent of agents" class="col-1-4">
     <div class="module hero">
